trunk:   - merge-tracking enhancements